@@ -14,6 +14,9 @@ bug.report <- function(subject = "", ccaddress = Sys.getenv("USER"),
 		  "Version:\\n ",
 		  paste(names(R.version),R.version, sep=" = ",collapse="\\n "),
 		  "\\n\\n",
+                  "Locale:\\n",
+                  Sys.getlocale(),
+		  "\\n\\n",
 		  "Search Path:\\n ",
 		  paste(search(), collapse=", "),
 		  "\\n", sep="", collapse="")
